// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Item as Toggler should render a nav as a toggle component 1`] = `
<div
  className="nav-item-wrapper"
>
  <div
    className=""
  >
    <a
      className="nav-item"
      href="#testPath"
    >
      <div>
        testIcon
      </div>
    </a>
  </div>
</div>
`;

exports[`Nav Item should apply custom classes 1`] = `
<div
  className="nav-item-wrapper test-class"
>
  <div
    className=""
  >
    <a
      className="nav-item"
      href="#testPath"
    >
      <div>
        testIcon
      </div>
    </a>
  </div>
</div>
`;

exports[`Nav Item should render a default component 1`] = `
<div
  className="nav-item-wrapper"
>
  <div
    className=""
  >
    <a
      className="nav-item"
      href="#testPath"
    >
      <div>
        testIcon
      </div>
    </a>
  </div>
</div>
`;
